--- a/src/renderer/layouts/css.css
+++ b/src/renderer/layouts/css.css
@@ -1,21 +1,15 @@
-.dialog-enter {
-  opacity: 0.01;
-  transform: scale(1.1);
+/* CSS file or styled-components */
+.my-animation {
+  /* Define your animation properties here */
+  animation-name: fadeIn;
+  animation-duration: 0.5s;
 }
 
-.dialog-enter-active {
-  opacity: 1;
-  transform: scale(1);
-  transition: all 300ms;
-}
-
-.dialog-exit {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.dialog-exit-active {
-  opacity: 0.01;
-  transform: scale(1.1);
-  transition: all 300ms;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
