--- a/src/renderer/layouts/css.css
+++ b/src/renderer/layouts/css.css
@@ -9,7 +9,14 @@
   from {
     opacity: 0.8;
   }
+
   to {
     opacity: 1;
   }
+}
+
+.logo-icon {
+  background: #112c5ef2;
+  height: 64px;
+  padding: 2px;
 }
