--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -21,9 +21,9 @@
   box-shadow: none;
 }
 
-.ant-select-focused:where(.css-dev-only-do-not-override-14wr7n2).ant-select:not(.ant-select-disabled):not(
-    .ant-select-customize-input
-  ):not(.ant-pagination-size-changer)
+.ant-select-focused:where(.css-dev-only-do-not-override-14wr7n2).ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(
+    .ant-pagination-size-changer
+  )
   .ant-select-selector {
   box-shadow: none;
   border-color: #cdc2c2 !important;
