--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -46,3 +46,7 @@
 :where(.css-dev-only-do-not-override-1a6vqd1).ant-menu-dark > .ant-menu .ant-menu-item {
   border-radius: 0;
 }
+
+.highcharts-credits {
+  display: none;
+}
